cluster/75-promtail/promtail.yaml
---
# Loki LoadBalancer Service for VPS Grafana to query.
apiVersion: v1
kind: Service
metadata:
  name: loki-external
  namespace: monitoring
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.0.0.204"
    metallb.io/address-pool: pool-10-0-0
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: loki
  ports:
    - name: http
      port: 3100
      targetPort: http-metrics
