cluster/75-promtail/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: loki.k8s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: loki, port: { number: 3100 } }
